get tag helpers working for routing

--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -5,6 +5,9 @@
         <title>WEB PAGE</title>
     </head>
     <body>
-        <h1 class="main-header">Here is the main header!</h1>
+        <header>
+            <h1>Hello World Header</h1>
+        </header>
+        <h2 class="main-topic">Here is some title of a topic!</h2>
     </body>
 </html>
